# piltover

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MINI_PASHA_SETUP.md  README.md  aioudp.py  docker-compose.yml  pyproject.toml  reflector.py
.github/workflows/: pytest.yml
config/: app.toml  gateway.toml  system.toml
data/: .gitignore  auth_countries_list.json  mini_pasha_gift.json
data/mypy_stubs/: fastrand.pyi
data/testing/: .gitignore
notes/: authkey-generation.md  channels-access.md  mtproto-transports.md  updates-on-server.md
piltover/: __init__.py  __main__.py  _faster_taskiq_inmemory_result_backend.py  _keygen_handlers.py  _system_handlers.py  app_config.py  auth_data.py  cache.py  connection.py  context.py  enums.py  exceptions.py  gateway.py  high_level.py  scheduler.py  server.py  session.py  session_manager.py  taskiq_tl_message_formatter.py  tl_rpc.py  worker.py
piltover/app/: __init__.py  __main__.py  account.py  app.py  auth.py  channels.py  contacts.py  help.py  internal.py  langpack.py  messages.py  photos.py  scheduler.py  stories.py  system.py  telegram_integration_bot.py  testing.py  updates.py  upload.py  users.py  utils.py  worker.py
piltover/app/bot_handlers/: bots.py  interaction_handler.py
piltover/app/handlers/: __init__.py  account.py  auth.py  channels.py  contacts.py  help.py  internal.py  internal_web.py  langpack.py  payments.py  phone.py  photos.py  stickers.py  stories.py  stubs.py  testing.py  updates.py  upload.py  users.py
piltover/app/messages/: __init__.py  chats.py  dialogs.py  history.py  other.py  sending.py  stubs.py
piltover/app/utils/: app_create_system_data.py  config_helper.py  formatable_text_with_entities.py  system_notifications.py  to_tl.py  updates_manager.py  utils.py
piltover/config/: 0044_auto_20260524_1413.py  __init__.py  app.py  gateway.py  system.py  worker.py
piltover/db/: enums.py
piltover/db/migrations/: 0001_initial.py  0002_auto_20260225_1401.py  0003_auto_20260303_1744.py  0004_auto_20260303_1935.py  0005_auto_20260303_2001.py  0006_auto_20260304_1618.py  0007_auto_20260307_1814.py  0008_auto_20260310_1545.py  0009_auto_20260315_2023.py  0010_auto_20260316_1614.py  0011_auto_20260317_1947.py  0012_auto_20260319_1529.py  0013_auto_20260322_1858.py  0014_auto_20260323_1533.py  0015_auto_20260323_1602.py  0016_auto_20260324_1431.py  0017_auto_20260324_1446.py  0018_auto_20260329_1343.py  0019_auto_20260331_1409.py  0020_auto_20260401_1304.py  0021_auto_20260401_1453.py  0022_auto_20260403_2226.py  0023_auto_20260404_1515.py  0024_auto_20260408_1505.py  0025_auto_20260408_1639.py  0026_auto_20260410_1714.py  0026_auto_20260412_1538.py  0027_auto_20260418_1432.py  0028_auto_20260418_1908.py  0029_auto_20260421_1718.py  0030_auto_20260424_1848.py  0031_auto_20260424_2036.py  0032_auto_20260426_1542.py  0033_auto_20260501_1543.py  0034_auto_20260504_1933.py  0035_auto_20260506_1624.py  0036_auto_20260507_1620.py  0037_auto_20260510_1852.py  0038_auto_20260515_1625.py  0039_auto_20260515_1905.py  (+28 more)
piltover/db/models/: __init__.py  _utils.py  admin_log_entry.py  api_application.py  auth_country.py  auth_country_code.py  authkey.py  available_channel_reaction.py  bot.py  bot_command.py  bot_info.py  bot_state_base.py  botfather_state.py  callback_query.py  channel.py  channel_participant_ban.py  channel_post_info.py  channel_update.py  chat.py  chat_base.py  chat_invite.py  chat_invite_request.py  chat_migration.py  chat_participant.py  chat_wallpaper.py  contact.py  default_send_as.py  dialog.py  dialog_base.py  dialog_folder.py  discussion_read_state.py  emoji_group.py  encrypted_chat.py  encrypted_file.py  faved_sticker.py  file.py  file_access.py  gif_bot_file.py  inline_query.py  inline_query_result.py  (+69 more)
piltover/gateway/: __init__.py  _keygen_handlers.py  _system_handlers.py  client.py  server.py
piltover/layer_converter/: manager.py
piltover/message_brokers/: base_broker.py  in_memory_broker.py  rabbitmq_broker.py
piltover/pubsub/: base.py  in_memory_pubsub.py
piltover/session/: msg_id_generator.py  session.py  session_manager.py
piltover/storage/: __init__.py  base.py  local_file.py  s3.py
piltover/tl/: __init__.py  core_types.py  serialization_context.py  serialization_utils.py  tl_object.py  tl_worker.py  types.py  utils.py
piltover/tl_new/: __init__.py  core_types.py  serialization_utils.py  tl_object.py  utils.py
piltover/tl_new_c/: __init__.py  serialization_utils.py  tl_object.py  utils.py
piltover/utils/: __init__.py  buffered_stream.py  debug.py  gen_primes.py  logging_loguru_handler.py  repeated_list.py  rsa_pairs.py  rsa_utils.py  single_element_list.py  snowflake.py  srp.py  users_chats_channels.py  utils.py
scripts/: clone-database.sh  fix_stickerset_sticker_counts.py  measure_to_tl_bulk_performance_diff.py  migrate_to_message_related.py
tests/: __init__.py  _account_compat.py  _emoji_groups_compat.py  _peer_colors_compat.py  client.py  conftest.py  scheduled_loop.py  test_account.py  test_auth.py  test_bots.py  test_builtin_bots.py  test_channels.py  test_chat_invites.py  test_chat_themes.py  test_chats.py  test_contacts.py  test_dialog_folders.py  test_key_generation.py  test_languages.py  test_messages.py  test_mtproto.py  test_peer_colors.py  test_photos.py  test_privacy_rules.py  test_reactions.py  test_secret.py  test_stickers.py  test_tl.py  tl_bench.py  utils.py
tests/config/: app.toml  gateway.toml  system.s3.toml  system.toml  worker.toml
tools/: conv_gen.py  create_mini_pasha_gift.py  download_chat_themes.py  download_emoji_groups.py  download_languages.py  download_peer_colors.py  download_reactions.py  download_system_stickerset.py  download_utils.py  pyro_compiler.py  tl_compile.py  tl_compute.py  tl_gen.py  tl_gen_placeholders.py  tl_gen_replace_constructors.py  tl_gen_write_hooks.py  websocket_proxy.py
tools/resources/: api_133.tl  api_134.tl  api_135.tl  api_168.tl  api_169.tl  api_170.tl  api_171.tl  api_40.tl  api_57.tl  api_70.tl  api_72.tl  internal.tl  mtproto.tl  secret.tl
tools/templates/: combinator.txt  converter.txt  type.txt
(+572 files in other folders)
