[project]
name = "piltover"
version = "0.0.0"
description = "An experimental Telegram server written from scratch in Python."
license = "AGPL-3.0"
license-files = [
    "LICENSE",
    "LICENSE.MIT",
]
authors = [
    { name = "Davide Galilei", email = "davidegalilei2018@gmail.com" },
    { name = "RuslanUC", email = "dev_ruslan_uc@protonmail.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Internet",
]
keywords = ["telegram", "server", "mtproto", "mtproto-server"]
requires-python = ">=3.11.1,<4.0"
dependencies = [
    "cryptography (>=46.0.3,<47.0.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
    "uvloop (>=0.22.1,<1.0.0); sys_platform != 'win32'",
    "loguru (>=0.7.3,<1.0.0)",
    "tortoise-orm[accel,asyncmy] (>=1.1.5,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    # TODO: upgrade to 0.2.x and use Session from mtproto in Gateway from piltover
    "mtproto (==0.1.4)",
    "aiofiles (>=25.1.0,<26.0.0)",
    # Taskiq >= 0.11.16 has some problem with __name__ attribute of class methods
    #  https://github.com/taskiq-python/taskiq/issues/436
    "taskiq (>=0.11.11,<1.0.0)",
    "taskiq-aio-pika (>=0.4.1,<1.0.0)",
    "taskiq-redis (>=1.0.2,<2.0.0)",
    "aiocache (>=0.12.3,<1.0.0)",
    "fastrand @ git+https://github.com/RuslanUC/fastrand.git@feat/add-functions-to-generate-random-bytes",
    "python-magic (>=0.4.27,<1.0.0)",
    "av (>=16.1.0,<17.0.0)",
    "httpx (>=0.28.1,<1.0.0)",
    "lru-dict (>=1.4.1,<2.0.0)",
]

[project.urls]
repository = "https://github.com/RuslanUC/piltover"

[tool.poetry]
package-mode = false

#[dependency-groups]
#dev = [
#    "websockets (>=12.0,<13.0.0)",
#    "tqdm (>=4.66.5,<5.0.0)",
#    "aiomonitor (>=0.7.0,<1.0.0)",
#    "yappi (>=1.6.10,<2.0.0)",
#    "py-spy (>=0.4.0,<1.0.0)",
#    "snakeviz (>=2.2.2,<3.0.0)",
#    "tuna (>=0.5.11,<1.0.0)",
#    "pyrogram (>=2.0.106,<3.0.0)",
#    "mypy (>=1.17.1,<2.0.0)",
#    "ty (>=0.0.1a20,<1.0.0)",
#    "pyinstrument (>=5.1.1,<6.0.0)",
#    "scalene (>=1.5.55,<2.0.0)",
#]
#test = [
#    "pytest (>=8.3.4,<9.0.0)",
#    "pytest-cov (>=6.0.0,<7.0.0)",
#    "pyrogram (>=2.0.106,<3.0.0)",
#    "pytest-asyncio (>=0.25.0,<1.0.0)",
#    "tg-secret (>=0.1.3,<1.0.0)",
#]

[tool.poetry.group.dev.dependencies]
websockets = "^12.0"
tqdm = "^4.66.5"
aiomonitor = "^0.7.0"
yappi = "^1.6.10"
py-spy = "^0.4.0"
snakeviz = "^2.2.2"
tuna = "^0.5.11"
pyrogram = "^2.0.106"
mypy = "^1.17.1"
ty = "^0.0.1a20"
pyinstrument = "^5.1.1"
scalene = "^1.5.55"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyrogram = "^2.0.106"
pytest-asyncio = "^0.25.0"
tg-secret = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
data_file = "coverage.coverage"
omit = [
    "*piltover/tl/base/*",
    "*piltover/tl/types/*",
    "*piltover/tl/functions/*",
    "*piltover/tl/all.py",
]

[tool.tortoise]
tortoise_orm = "piltover.app_config.TORTOISE_ORM"