[project]
name = "piltover"
version = "0.0.0"
description = "An experimental Telegram server written from scratch in Python."
license = "AGPL-3.0"
license-files = [
    "LICENSE",
    "LICENSE.MIT",
]
authors = [
    { name = "Davide Galilei", email = "davidegalilei2018@gmail.com" },
    { name = "RuslanUC", email = "dev_ruslan_uc@protonmail.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Internet",
]
keywords = ["telegram", "server", "mtproto", "mtproto-server"]
requires-python = ">=3.11.1,<4.0"
dependencies = [
    "cryptography (>=46.0.6,<47.0.0)",
    "tgcrypto (>=1.2.5,<2.0.0)",
    "uvloop (>=0.22.1,<1.0.0); sys_platform != 'win32'",
    "loguru (>=0.7.3,<1.0.0)",
    "tortoise-orm[accel,asyncmy] (>=1.1.7,<2.0.0)",
    # "tortoise-orm[accel,asyncmy] @ git+https://github.com/RuslanUC/tortoise-orm.git@feat/add-prepared-parametrized-queries",
    "pillow (>=12.1.0,<13.0.0)",
    "mtproto[tgcrypto,http,ws] @ git+https://github.com/RuslanUC/mtproto.git",
    "aiofiles (>=25.1.0,<26.0.0)",
    "taskiq (>=0.12,<0.13)",
    "taskiq-aio-pika (>=0.6,<0.7)",
    "taskiq-redis (>=1.2,<2)",
    "aiocache (>=0.12.3,<1.0.0)",
    "fastrand @ git+https://github.com/RuslanUC/fastrand.git@feat/add-functions-to-generate-random-bytes",
    "python-magic (>=0.4.27,<1.0.0)",
    "av (>=17.0.0,<18.0.0)",
    "httpx (>=0.28.1,<1.0.0)",
    "lru-dict (>=1.4.1,<2.0.0)",
    "pylinkify @ git+https://github.com/RuslanUC/pylinkify.git",
    "pydantic-settings (>=2.13.1,<3.0.0)",
]

[project.urls]
repository = "https://github.com/RuslanUC/piltover"

[tool.poetry]
package-mode = false

#[dependency-groups]
#dev = [
#    "websockets (>=12.0,<13.0.0)",
#    "tqdm (>=4.66.5,<5.0.0)",
#    "aiomonitor (>=0.7.0,<1.0.0)",
#    "yappi (>=1.6.10,<2.0.0)",
#    "py-spy (>=0.4.0,<1.0.0)",
#    "snakeviz (>=2.2.2,<3.0.0)",
#    "tuna (>=0.5.11,<1.0.0)",
#    "pyrogram (>=2.0.106,<3.0.0)",
#    "mypy (>=1.17.1,<2.0.0)",
#    "ty (>=0.0.1a20,<1.0.0)",
#    "pyinstrument (>=5.1.1,<6.0.0)",
#    "scalene (>=1.5.55,<2.0.0)",
#]
#test = [
#    "pytest (>=8.3.4,<9.0.0)",
#    "pytest-cov (>=6.0.0,<7.0.0)",
#    "pyrogram (>=2.0.106,<3.0.0)",
#    "pytest-asyncio (>=0.25.0,<1.0.0)",
#    "tg-secret (>=0.1.3,<1.0.0)",
#]

[tool.poetry.group.dev.dependencies]
websockets = "^12.0"
tqdm = "^4.66.5"
aiomonitor = "^0.7.0"
yappi = "^1.6.10"
py-spy = "^0.4.0"
mypy = "^1.17.1"
pyinstrument = "^5.1.1"
aiozipkin = "^1.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
pyrogram = {git = "https://github.com/RuslanUC/pyrogram-exp.git", rev = "piltover"}
pytest-asyncio = "^1.3.0"
tg-secret = "^0.1.3"
faker = "^40.5.1"
pytest-repeat = "^0.9.4"
pytest-env = "^1.6.0"

[tool.coverage.run]
data_file = "coverage.coverage"
omit = [
    "*piltover/tl/base/*",
    "*piltover/tl/types/*",
    "*piltover/tl/functions/*",
    "*piltover/tl/all.py",
]

[tool.tortoise]
tortoise_orm = "piltover.config.TORTOISE_ORM"

[tool.pytest]
python_classes = []
filterwarnings = ["error", "ignore::ResourceWarning"]
markers = [
    "real_auth: use SignIn/SignUp for auth instead of automatically-created session",
    "real_key_gen: use real auth key generation process",
    "create_countries: insert test countries to the database",
    "create_reactions: insert test reactions to the database",
    "create_chat_themes: insert test chat themes to the database",
    "create_peer_colors: insert test peer colors to the database",
    "create_languages: insert test languages to the database",
    "create_system_stickersets: insert built-in stickersets to the database",
    "create_emoji_groups: insert test emoji groups to the database",
    "run_scheduler: run taskiq scheduler",
    "dont_create_sys_user: dont create system user",

    "search_results_calendar",
]
strict_config = true
strict_markers = true
strict_parametrization_ids = true
strict_xfail = false
testpaths = ["tests"]

asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
#asyncio_debug = true

[tool.pytest_env]
APP_CONFIG = "tests/config/app.toml"
GATEWAY_CONFIG = "tests/config/gateway.toml"
SYSTEM_CONFIG = "tests/config/system.toml"
WORKER_CONFIG = "tests/config/worker.toml"
